--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "dependencies": {
         "@11ty/eleventy": "*",
         "cross-env": "^7.0.3",
+        "csv-parse": "^4.15.4",
         "html-minifier": "^4.0.0",
         "npm-run-all": "^4.1.5",
-        "sass": "^1.29.0",
-        "webpack": "^5.21.2",
-        "webpack-cli": "^4.5.0"
+        "sass": "^1.32.12",
+        "webpack": "^5.36.2",
+        "webpack-cli": "^4.7.0"
     }
 }
